# PyArielRetrieval

./: Keyfeatures.txt  LICENSE.txt  README.md
Filecontents/: pyproject.toml
data/calibration/: airs_dark.h5
src/pipeline/: calibration.py  core.py  setup.py
src/pipeline/lightcurve/: calibrator.py
src/pipeline/retrieval/: .gitignore  multinest.py  opacity.py
src/pipeline/systematics/: wavelet.py
src/pipeline/utils/tests/unit/: test_wavelet.py
src/pipeline/utils/tests/unit/docs/: Methods.txt  conf.py
