[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyArielRetrieval"
version = "0.1.0"
description = "Atmospheric retrieval pipeline for Ariel mission data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pymultinest>=2.10",
    "batman-package>=2.4",
    "pywavelets>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=0.910", "black>=22.0"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing"
"""Modern Packaging"""